# whisper-typer

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  config.yaml  install.sh  pyproject.toml
.whisper/: README.md  corrections.yaml  vocabulary.txt
docs/: RUST-ECOSYSTEM.md  RUST-README.md
hooks/: tts-hook.sh
infra/: install.sh
infra/systemd/: voice-journal.service  whisper-typer.service
src/: config.rs  history.rs  hotkey.rs  main.rs  mcp_server.rs  processor.rs  recorder.rs  service.rs  transcriber.rs  typer.rs  vad.rs
src/code_speaker/: api.rs  history.rs  mod.rs  transcript.rs  tts.rs
src/whisper_input/: __main__.py  config.py  processor.py  recorder.py  service.py  transcriber.py  typer.py
src/whisper_typer/: __init__.py  __main__.py  config.py  history.py  hotkey.py  mcp_server.py  notifier.py  ollama_client.py  processor.py  recorder.py  service.py  silence_detector.py  transcriber.py  typer.py  wakeword.py
src/whisper_typer/code_speaker/: __init__.py  __main__.py  api.py  history.py  reminder.py  summarizer.py  transcript.py  tts.py
systemd/: whisper-input.service  whisper-typer.service
udev/: 99-uinput.rules
whisper-typer-rs/: Cargo.toml  PLAN.md
whisper-typer-rs/src/: config.rs  history.rs  hotkey.rs  main.rs  mcp_server.rs  notifier.rs  processor.rs  recorder.rs  service.rs  transcriber.rs  typer.rs
whisper-typer-rs/src/code_speaker/: api.rs  history.rs  mod.rs  reminder.rs  summarizer.rs  transcript.rs  tts.rs
