[package]
name = "whisper-typer-rs"
version = "0.1.0"
edition = "2021"
description = "Speech-to-text dictation service for Linux using Whisper and Ollama"

[[bin]]
name = "whisper-typer-rs"
path = "src/main.rs"

[[bin]]
name = "tts-hook"
path = "src/bin/tts_hook.rs"

[[bin]]
name = "voice-journal"
path = "src/bin/voice_journal.rs"
required-features = ["voice-journal-gui"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hotkey detection
evdev = { version = "0.12", features = ["tokio"] }

# Audio capture
cpal = "0.15"

# WAV output (for Phase 1 testing)
hound = "3.5"

# Home directory
dirs = "5"

# Whisper ASR
whisper-rs = { version = "0.15", features = ["tracing_backend"] }

# HTTP client (Ollama API + voice-journal GUI multipart upload)
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
serde_json = "1"
base64 = "0.22"

# Clipboard + key simulation
arboard = "3"
enigo = { version = "0.2", features = ["xdo"] }


# Date/time
chrono = "0.4"

# MCP server
rmcp = { version = "0.16", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1"
axum = { version = "0.8", features = ["multipart"] }

# TTS (Kokoro ONNX) - native implementation
ort = { version = "=2.0.0-rc.11", features = ["cuda"] }
misaki-rs = "0.3"
ndarray = "0.17"
ndarray-npy = "0.10"
rodio = "0.21"

# egui GUI for the voice-journal binary. Optional — pulled in only by
# the `voice-journal-gui` feature so it doesn't bloat the main service build.
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"], optional = true }
egui = { version = "0.32", optional = true }
rfd = { version = "0.15", optional = true }

[features]
default = ["cuda"]
cuda = ["whisper-rs/cuda"]
voice-journal-gui = ["dep:eframe", "dep:egui", "dep:rfd"]
